hphp/hack/test/ifc/check/cipp_calls.php.exp
File "cipp_calls.php", line 44, characters 3-13:
Context-implicit policy leaks into `PUBLIC` via `pc`. (Typing[4380])
File "cipp_calls.php", line 19, characters 3-17:
Another program point contributing to the leakage
File "cipp_calls.php", line 6, characters 14-23:
Leakage sink
File "cipp_calls.php", line 44, characters 3-13:
Context-implicit policy leaks into `PUBLIC` via `lump`. (Typing[4380])
File "cipp_calls.php", line 19, characters 3-17:
Another program point contributing to the leakage
File "cipp_calls.php", line 18, characters 3-15:
Another program point contributing to the leakage
File "cipp_calls.php", line 6, characters 14-23:
Leakage sink
File "cipp_calls.php", line 38, characters 3-12:
Context-implicit policy leaks into `PUBLIC` via `pc`. (Typing[4380])
File "cipp_calls.php", line 19, characters 3-17:
Another program point contributing to the leakage
File "cipp_calls.php", line 6, characters 14-23:
Leakage sink
File "cipp_calls.php", line 38, characters 3-12:
Context-implicit policy leaks into `PUBLIC` via `$x`. (Typing[4380])
File "cipp_calls.php", line 19, characters 3-17:
Another program point contributing to the leakage
File "cipp_calls.php", line 6, characters 14-23:
Leakage sink
File "cipp_calls.php", line 38, characters 3-12:
Context-implicit policy leaks into `PUBLIC` via `lump`. (Typing[4380])
File "cipp_calls.php", line 19, characters 3-17:
Another program point contributing to the leakage
File "cipp_calls.php", line 18, characters 3-15:
Another program point contributing to the leakage
File "cipp_calls.php", line 6, characters 14-23:
Leakage sink
